samples/_failures_safe/1761470800_8eb4d3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fa68aac6.c: In function ‘main’:
./samples/SAFE/__tmp_fa68aac6.c:174:5: error: expected expression at end of input
  174 |     int max_tokens =
      |     ^~~
./samples/SAFE/__tmp_fa68aac6.c:174:5: error: expected declaration or statement at end of input
